fix(quests): make limit for the height of the icon, to not overflow

--- a/src/pages/quests/quests.scss
+++ b/src/pages/quests/quests.scss
@@ -47,6 +47,7 @@
 
                 img {
                     max-width: 100%;
+                    max-height: 100%;
                 }
             }
 
@@ -116,6 +117,7 @@
 
                 img {
                     max-width: 100%;
+                    max-height: 100%;
                 }
             }
         }
